# quote_gen

./: .gitignore  BUGS  CHANGELOG  README.md  TODO  TODO.org  cli.py  code.md  default-quotes.json  pyproject.toml  quote_gen.py  quotes.txt  setup.py
quote_gen/: app.py  config.py  db.py  engine.py  quote.py
quote_gen/tests/: test_db.py  test_quote.py
quote_gen_old/: app.py  config.py  db.py
quote_gen_old/tests/: test_db.py  test_quote.py
scripts/: get_todo_items  validation
tests/: test_db.py  test_engine.py
