[project]
name = "quote_gen"
version = "1.1.0"
description = "Generate a random quote from the list of available quotes"
authors = [
  { name = "Ramasubramanian S", email = "sramsubu@gmail.com" }
]
license = { text = "GPL" }
requires-python = ">=3.9"

readme = "README.md"

dependencies = []

[project.scripts]
quote_gen = "quote_gen:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"quote_gen" = ["default-quotes.json"]
